# tree-sitter-wasm

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yaml
crates/tree-sitter-facade/: Cargo.toml  package.json
crates/tree-sitter-facade/.github/workflows/: main.yaml
crates/tree-sitter-facade/assets/: tree-sitter-javascript.wasm
crates/tree-sitter-facade/src/: error.rs  input_edit.rs  language.rs  lib.rs  node.rs  parser.rs  point.rs  query.rs  range.rs  tree.rs  tree_cursor.rs
crates/tree-sitter-facade/xtask/src/: main.rs
crates/web-tree-sitter-sg/: Cargo.toml  package.json
crates/web-tree-sitter-sg/.github/: codecov.yml  dependabot.yml
crates/web-tree-sitter-sg/src/: lib.rs
crates/web-tree-sitter-sg/tests/node/: edit.rs  language.rs  parse_options.rs  parser.rs  point.rs  query_capture.rs  query_match.rs  syntax_node.rs  tree.rs  tree_cursor.rs  util.rs
crates/web-tree-sitter-sg/tests/node/util/: language.rs
crates/web-tree-sitter-sg/xtask/: Cargo.toml
crates/web-tree-sitter-sg/xtask/src/: main.rs
src/: lib.rs
tests/node/: parser.rs  predicate_operand.rs  predicate_result.rs  query.rs  range.rs  tree.rs  tree_cursor.rs
tests/node/util/: language.rs
web-tree-sitter-sg/: index.js  package.json
web-tree-sitter-wasm-bindgen/: .gitignore  package.json
