[package]
edition = "2021"
name = "web-tree-sitter-sg"
version = "0.25.10"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ast-grep/ast-grep"
description = """
Raw bindings to the tree-sitter-web API.
"""
documentation = "https://ast-grep.github.io/guide/introduction.html"
homepage = "https://ast-grep.github.io/"
rust-version = "1.63"

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[features]
default = ["node"]
node = []
web = ["web-sys"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
optional = true
version = "0.3"
features = [
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
